# shopify-export-gap-filler

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRE_PUBLICATION_SECURITY_AUDIT.md  README.md  RELEASE_READINESS.md  pyproject.toml
.github/workflows/: tests.yml
examples/: sample_orders.csv  sample_orders.json
src/shopify_gap_filler/: __init__.py  abandoned.py  cli.py  client.py  config.py  orders.py  output.py  queries.py  security.py
tests/: conftest.py  test_abandoned_flatten.py  test_cli_args.py  test_config.py  test_orders_flatten.py  test_orders_transactions_merge.py  test_output.py  test_pagination.py  test_query_no_phone.py  test_ratelimit_backoff.py  test_security_denylist.py
tests/fixtures/: abandoned_checkouts.json  orders_page1.json  orders_page2.json  orders_with_pci.json
