[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shopify-export-gap-filler"
version = "0.1.0"
description = "Enrich Shopify exports with what the native CSV omits: rich order details, non-sensitive payment metadata, and abandoned checkouts. GraphQL Admin API only. Read-only. No card/PCI data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "The shopify-export-gap-filler authors" }]
keywords = ["shopify", "graphql", "export", "orders", "abandoned-checkouts", "csv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.25",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
shopify-gap-filler = "shopify_gap_filler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
